--- a/AzureSQLWorkshop/azuresqlworkshop/02-DeployAndConfigure/cli/AzureCli.ipynb
+++ b/AzureSQLWorkshop/azuresqlworkshop/02-DeployAndConfigure/cli/AzureCli.ipynb
@@ -30,8 +30,6 @@
                 "\r\n",
                 "0. You should have opened this file using Azure Data Studio. If you didn't, please refer to Module 2 Activity 3 in the readme.md file to get set up.  \r\n",
                 "1. In the bar at the top of this screen, confirm or change the \"Kernel\" to **PowerShell**. This determines what language the code blocks in the file are. In this case, that language is SQL.  \r\n",
-                "2. You may be prompted to install Python, if you are select **New Python Installation**. This may take a few minutes, you'll see the output in a window that appears at the bottom of ADS.\r\n",
-                "TODO THIS TAKES ~5 minutes. \r\n",
                 "2. Confirming the Kernel is **PowerShell**, for \"Attach to\", confirm it reads **localhost**.  \r\n",
                 "\r\n",
                 "Now that you're set up, you should read the text cells and \"Run\" the code cells by selecting the play button that appears in the left of a code cell when you hover over it.  \r\n",
@@ -54,25 +52,33 @@
                 "tags": []
             },
             "outputs": [],
-            "execution_count": 1
+            "execution_count": null
         },
         {
             "cell_type": "code",
             "source": [
                 "# Specify your subscription for the workshop\r\n",
+                "# Should appear in the list of subscriptions output in previous cell\r\n",
                 "az account set --subscription <subscription-ID>"
             ],
             "metadata": {
                 "azdata_cell_guid": "da44d206-65f3-4749-b186-364ee211b766"
             },
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "text": "",
+                    "output_type": "stream"
+                }
+            ],
             "execution_count": 2
         },
         {
             "cell_type": "code",
             "source": [
                 "# Specify your default subscription, resource group, and Azure SQL Database logical server\r\n",
-                "az configure --defaults group=azuresqlworkshop0406 sql-server=aw-server0406"
+                "# Replace ID with your ID for the workshop\r\n",
+                "az configure --defaults group=azuresqlworkshopID sql-server=aw-serverID"
             ],
             "metadata": {
                 "azdata_cell_guid": "e91e1c9a-7175-45e0-879b-0f6ef150db3c",
@@ -80,12 +86,12 @@
             },
             "outputs": [
                 {
-                    "output_type": "stream",
                     "name": "stdout",
-                    "text": ""
+                    "text": "",
+                    "output_type": "stream"
                 }
             ],
-            "execution_count": 2
+            "execution_count": 3
         },
         {
             "cell_type": "markdown",
@@ -106,7 +112,7 @@
                 "azdata_cell_guid": "828e608f-fadd-40a7-8ac2-1f5394a81412"
             },
             "outputs": [],
-            "execution_count": 3
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -121,18 +127,18 @@
         {
             "cell_type": "code",
             "source": [
-                "az sql db show --name AdventureWorks0406"
+                "az sql db show --name AdventureWorksID"
             ],
             "metadata": {
                 "azdata_cell_guid": "85457b28-ac25-40a1-8dea-5cd1ca8a70f2"
             },
             "outputs": [],
-            "execution_count": 4
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
             "source": [
-                "You can also determine the database suze and usage."
+                "You can also determine the database size and usage."
             ],
             "metadata": {
                 "azdata_cell_guid": "9439704f-73d5-4c60-a422-233e2062dcff"
@@ -141,19 +147,19 @@
         {
             "cell_type": "code",
             "source": [
-                "az sql db list-usages --name AdventureWorks0406"
+                "az sql db list-usages --name AdventureWorksID"
             ],
             "metadata": {
                 "azdata_cell_guid": "ae511ce4-3a1c-4d4b-bef9-7ba77e281af6"
             },
             "outputs": [
                 {
-                    "output_type": "stream",
                     "name": "stdout",
-                    "text": "[\n  {\n    \"currentValue\": 556793856.0,\n    \"displayName\": \"Database Size\",\n    \"limit\": 34359738368.0,\n    \"name\": \"database_size\",\n    \"nextResetTime\": null,\n    \"resourceName\": \"AdventureWorks0406\",\n    \"unit\": \"Bytes\"\n  },\n  {\n    \"currentValue\": 1610612736.0,\n    \"displayName\": \"Database Allocated Size\",\n    \"limit\": 34359738368.0,\n    \"name\": \"database_allocated_size\",\n    \"nextResetTime\": null,\n    \"resourceName\": \"AdventureWorks0406\",\n    \"unit\": \"Bytes\"\n  }\n]\n"
+                    "text": "[\n  {\n    \"currentValue\": 12582912.0,\n    \"displayName\": \"Database Size\",\n    \"limit\": 34359738368.0,\n    \"name\": \"database_size\",\n    \"nextResetTime\": null,\n    \"resourceName\": \"AdventureWorks0218\",\n    \"unit\": \"Bytes\"\n  },\n  {\n    \"currentValue\": 16777216.0,\n    \"displayName\": \"Database Allocated Size\",\n    \"limit\": 34359738368.0,\n    \"name\": \"database_allocated_size\",\n    \"nextResetTime\": null,\n    \"resourceName\": \"AdventureWorks0218\",\n    \"unit\": \"Bytes\"\n  }\n]\n",
+                    "output_type": "stream"
                 }
             ],
-            "execution_count": 5
+            "execution_count": 6
         },
         {
             "cell_type": "markdown",
@@ -205,7 +211,7 @@
                 "azdata_cell_guid": "1af59f8b-afe3-43c5-863d-3549f06871ed"
             },
             "outputs": [],
-            "execution_count": 6
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -227,19 +233,13 @@
             "metadata": {
                 "azdata_cell_guid": "5114ebd7-b37d-4cd8-abbc-4a00ba77f798"
             },
-            "outputs": [
-                {
-                    "output_type": "stream",
-                    "name": "stdout",
-                    "text": "{\n  \"connectionType\": \"Proxy\",\n  \"id\": \"/subscriptions/227e9423-1792-43b0-82e6-ac94397ed789/resourceGroups/azuresqlworkshop0406/providers/Microsoft.Sql/servers/aw-server0406/connectionPolicies/default\",\n  \"kind\": null,\n  \"location\": null,\n  \"name\": \"default\",\n  \"resourceGroup\": \"azuresqlworkshop0406\",\n  \"type\": \"Microsoft.Sql/servers/connectionPolicies\"\n}\n{\n  \"connectionType\": \"Proxy\",\n  \"id\": \"/subscriptions/227e9423-1792-43b0-82e6-ac94397ed789/resourceGroups/azuresqlworkshop0406/providers/Microsoft.Sql/servers/aw-server0406/connectionPolicies/default\",\n  \"kind\": null,\n  \"location\": \"West US\",\n  \"name\": \"default\",\n  \"resourceGroup\": \"azuresqlworkshop0406\",\n  \"type\": \"Microsoft.Sql/servers/connectionPolicies\"\n}\n"
-                }
-            ],
-            "execution_count": 16
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
             "source": [
-                "If you want to test round trip time, you can connect with SSMS, create a new query (below), and choose to \"Include Client Statistics\" in your results. In the results, the \"Wait time on server replies\" is the best indicator of network latency. You can run this a few times to get a good average.  \r\n",
+                "If you want to test round trip time, you can connect with SSMS, create a new query (below), and choose to \"Include Client Statistics\" in your results. Be sure to right-click on the database and select **New Query**. In the results, the \"Wait time on server replies\" is the best indicator of network latency. You can run this a few times to get a good average.  \r\n",
                 "\r\n",
                 "```sql\r\n",
                 "-- Proxy\r\n",
@@ -277,14 +277,8 @@
             "metadata": {
                 "azdata_cell_guid": "c540779a-9c4d-472f-8ddc-6fc59b8437d4"
             },
-            "outputs": [
-                {
-                    "output_type": "stream",
-                    "name": "stdout",
-                    "text": "{\n  \"connectionType\": \"Redirect\",\n  \"id\": \"/subscriptions/227e9423-1792-43b0-82e6-ac94397ed789/resourceGroups/azuresqlworkshop0406/providers/Microsoft.Sql/servers/aw-server0406/connectionPolicies/default\",\n  \"kind\": null,\n  \"location\": null,\n  \"name\": \"default\",\n  \"resourceGroup\": \"azuresqlworkshop0406\",\n  \"type\": \"Microsoft.Sql/servers/connectionPolicies\"\n}\n{\n  \"connectionType\": \"Redirect\",\n  \"id\": \"/subscriptions/227e9423-1792-43b0-82e6-ac94397ed789/resourceGroups/azuresqlworkshop0406/providers/Microsoft.Sql/servers/aw-server0406/connectionPolicies/default\",\n  \"kind\": null,\n  \"location\": \"West US\",\n  \"name\": \"default\",\n  \"resourceGroup\": \"azuresqlworkshop0406\",\n  \"type\": \"Microsoft.Sql/servers/connectionPolicies\"\n}\n"
-                }
-            ],
-            "execution_count": 17
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -331,14 +325,8 @@
             "metadata": {
                 "azdata_cell_guid": "34f23b31-0252-436f-abdb-f0b7208f44b7"
             },
-            "outputs": [
-                {
-                    "output_type": "stream",
-                    "name": "stdout",
-                    "text": "{\n  \"connectionType\": \"Default\",\n  \"id\": \"/subscriptions/227e9423-1792-43b0-82e6-ac94397ed789/resourceGroups/azuresqlworkshop0406/providers/Microsoft.Sql/servers/aw-server0406/connectionPolicies/default\",\n  \"kind\": null,\n  \"location\": null,\n  \"name\": \"default\",\n  \"resourceGroup\": \"azuresqlworkshop0406\",\n  \"type\": \"Microsoft.Sql/servers/connectionPolicies\"\n}\n{\n  \"connectionType\": \"Default\",\n  \"id\": \"/subscriptions/227e9423-1792-43b0-82e6-ac94397ed789/resourceGroups/azuresqlworkshop0406/providers/Microsoft.Sql/servers/aw-server0406/connectionPolicies/default\",\n  \"kind\": null,\n  \"location\": \"West US\",\n  \"name\": \"default\",\n  \"resourceGroup\": \"azuresqlworkshop0406\",\n  \"type\": \"Microsoft.Sql/servers/connectionPolicies\"\n}\n"
-                }
-            ],
-            "execution_count": 18
+            "outputs": [],
+            "execution_count": null
         }
     ]
 }
